--- a/themes/hugo-ficurinia/layouts/partials/head.html
+++ b/themes/hugo-ficurinia/layouts/partials/head.html
@@ -28,8 +28,8 @@
         how to update these hashes:
         https://gitlab.com/gabmus/hugo-ficurinia/-/merge_requests/5
     */}}
-    <link href="/symbols-nerd-font/symbols-nerd-font.css" rel="stylesheet" integrity="sha512-lydow8GLOLlYNOtHlksNCmGWWCBsbIEtikXpHzfWqx78HLlyQZHOzyLwPpKol4Th6aCwLUXOfODVYgwrd3nwKQ=="/>
-    <link href="/jetbrains-mono/jetbrains-mono.css" rel="stylesheet" integrity="sha512-tJxlgL6v1Y7kFf+qB8SloaAMKnOAw6WouknxXtIjkBux9Y/9aX81EUWOJO8c/3l98DmjG8brr4to7zaez606Fg=="/>
+    <link href="/symbols-nerd-font/symbols-nerd-font.css" rel="stylesheet" />
+    <link href="/jetbrains-mono/jetbrains-mono.css" rel="stylesheet" />
 
     {{ if and site.Params.cactusCommentsSiteName (.Params.comments | default true) }}
         <link rel="stylesheet" href="https://latest.cactus.chat/style.css" type="text/css">
